--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -3,7 +3,7 @@
 
 {% block title %}پروژه ها{% endblock %}
 
-{% block name %} دکتر احسان شریف{% endblock %}
+{% block name %} {{ request.user.expertuser.expertform }}{% endblock %}
 
 {% block dialog %}
     {% include 'expert/layouts/initial_information.html' %}
