some changes on password confirm form

--- a/templates/registration/password_confirmation.html
+++ b/templates/registration/password_confirmation.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
-
+{% load widget_tweaks %}
 {% block content %}
-    <form method="post" action=""
-          novalidate>
+    <form method="post" action="">
         {% csrf_token %}
-{#        {{ form.password }}#}
-{#        {{ form.password.errors }}#}
-{#        {{ form.confirm_password }}#}
-{#        {{ form.confirm_password.errors}}#}
-        {{ form.as_p }}
-        <input type="submit" class="Enter-btn" >
+        <label for="pass">رمز عبور</label>
+        {{ form.password|attr:"id:pass" }}
+        <label for="confirm_pass">تایید رمز عبور</label>
+        {{ form.confirm_password|attr:"id:confirm_pass" }}
+        <input type="submit" value="ثبت">
     </form>
 {% endblock content %}
