--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -214,6 +214,8 @@ img{
     padding: 5px 15px;
     text-align: center;
     min-width: 100px;
+    height: auto;
+    margin-top: 0!important;
     border-radius: 0.25em;
 }
 .fixed-back .card-footer .reject-btn{
@@ -225,7 +227,7 @@ img{
 }
 .fixed-back .card-footer .save-btn{
     background-color: #89E076;
-    color: #ffffff;
+    color: #ffffff!important;
 }
 .fixed-back .card-footer .save-btn:hover{
     background-color: #3ccd1c;
@@ -776,6 +778,7 @@ hr{
   display: inline-block;
   float: right;
   margin: 2px 10px;
+    width: 92%;
 }
 .list-group-item a{
   color: inherit;
@@ -812,6 +815,7 @@ hr{
   border-radius: 30px;
   background-color: #fff;
   color: #3CCD1C;
+    width: 92%;
 }
 .content {
   position: absolute;
@@ -1002,6 +1006,9 @@ table{
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-collapse: separate!important;
+}
+.user-info table{
+    border: none;
 }
 td{
   position: relative;
